--- a/styles.css
+++ b/styles.css
@@ -83,12 +83,12 @@ body > a{
     margin-left:150px;
 }
 #chrysanthemumImage{
-    height:500px;
+    height:50vh;
     width:auto;
     margin:50px;
 }
 #hyacinthImage{
-    height:500px;
+    height:50vh;
     width:auto;
 }
 
